add the nakama logo in the principal page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,5 +3,9 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Welcome to Astro.">
-  <main class="text-primary">Nakama</main>
+  <main class="text-primary">
+    <div class="flex">
+      <img src="/logo.svg" />
+    </div>
+  </main>
 </Layout>
