add config to add font atomic  and delete Card component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,13 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Nakama">
   <main class="text-primary">
     <div class="flex">
       <img src="/logo.svg" />
+    </div>
+    <div class="flex justify-center font-atomic max-w-5xl">
+      Estoy usando la font que me pasaste chaparro.
     </div>
   </main>
 </Layout>
