Add a new cool feature

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from '../layouts/Layout.astro';
       <img src="/logo.svg" />
     </div>
     <div class="flex justify-center font-atomic max-w-5xl">
-      Estoy usando la font que me pasaste chaparro.
+      Feature new cool thing
     </div>
   </main>
 </Layout>
